--- a/index.html
+++ b/index.html
@@ -38,7 +38,21 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <script>
 
-	//YOUR JAVASCRIPT GOES HERE
+	var depression_count = 0;//This is the variable for depression_count inputs from users
+        var anxiety_count = 0;//This is the variable for the anxiety_count inputs from users
+        var total = 4;//This is the total number of inputs from users, regardless of yes/no choices
+
+
+        function depressionAdd(){
+            allergy_count = allergy_count + 1;//This is the function that will add up and keep track of the depression inputs from users
+		
+		
+
+        }
+
+        function anxietyAdd(){
+            cold_count = cold_count + 1;//This is the function that will add up and keep track of the anxiety inputs from users
+        }
 
 </script>	
 
