--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function anxietyAdd(){
             cold_count = cold_count + 1;//This is the function that will add up and keep track of the anxiety inputs from users
         }
+	function getResults(){
+          if(depression_count>anxiety_count)//condition for this part of the function to trigger
+          {document.write("There is a "+(depression_count/total)*100+ "%chance of you having depression");//Writes the result statement by determining the probability of the user having depression based on their input.
+          
+        
+          }
+          else if (anxiety_count>depression_count)//condition for this part of the function to trigger
+          {document.write("There is a "+(cold_count/total)*100+"% chance of you having anxiety");//Writes the result statement by determining the probability of the user having anxiety based on their input.
+          }
+          else  //for when allergy_count=cold_count
+          { document.write("The results are inconclusive, please see a health professional.");} //writes the inconclusive result when cold depression_count=anxiety_count count.
+        }
 
 </script>	
 
