--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         }
 	function getResults(){
           if(depression_count>anxiety_count)//condition for this part of the function to trigger
-          {document.write("There is a "+(depression_count/total)*100+ "%chance of you having depression");//Writes the result statement by determining the probability of the user having depression based on their input.
-          
+          {document.write("There is a "+(depression_count/total)*100+ "% probability of you having depression."+ "<br>");//Writes the result statement by determining the probability of the user having depression based on their input.
+           document.write("However, mental illnesses are always difficult to correctly diagnose due to many overlapping symptoms, please see a psychiatrist if you are having any problems mentally.");
         
           }
           else if (anxiety_count>depression_count)//condition for this part of the function to trigger
-          {document.write("There is a "+(cold_count/total)*100+"% chance of you having anxiety");//Writes the result statement by determining the probability of the user having anxiety based on their input.
+          {document.write("There is a "+(anxiety_count/total)*100+"% probability of you having anxiety."+"<br>");//Writes the result statement by determining the probability of the user having anxiety based on their input.
+          document.write("However, mental illnesses are always difficult to correctly diagnose due to many overlapping symptoms, please see a psychiatrist if you are having any problems mentally.");
           }
           else  //for when allergy_count=cold_count
           { document.write("The results are inconclusive, please see a health professional.");} //writes the inconclusive result when cold depression_count=anxiety_count count.
