--- a/index.html
+++ b/index.html
@@ -104,10 +104,20 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         <p>Do you feel any sadness or hoplessness?</p>   <!--This is a question that asks users if they feel sad or hopeless-->  
 		<a href="#two"  onclick="depressionAdd();" class="w3-btn w3-black"> Yes </a> <!--This is for the yes button, which has the function depressionadd within it to trigger adding to depression_count jump to page 2-->
          	<a href="#two"  onclick="anxietyAdd();" class="w3-btn w3-black"> No </a> <!--This is for the no buttom, which has the function anxietyadd within it to trigger adding to the anxiety_count jump to page 2-->
-
-
-
+		
     	</div>
+	</div>
+
+<div class="page" id="two"> <!--Page 2-->
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 2</h1>  <!--Question 2 heading-->
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p>Do you feel cranky or on edge often?</p><!--This is a question that asks the users if they fell cranky or on edge-->
+		<a href="#three"  onclick="anxietyAdd();" class="w3-btn w3-black"> Yes </a>  <!--This is for the yes button which has the function anxietyadd within it to trigger adding to the Anxiety count jump to page 3-->
+         	<a href="#three"  onclick="depressionAdd();;" class="w3-btn w3-black"> No </a> <!--This is for the no button, which has the function depressionadd within it to trigger adding to depression_count jump to page 3-->
+	</div>
 	
 </body>
 </html>
