--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#three"  onclick="anxietyAdd();" class="w3-btn w3-black"> Yes </a>  <!--This is for the yes button which has the function anxietyadd within it to trigger adding to the Anxiety count jump to page 3-->
          	<a href="#three"  onclick="depressionAdd();;" class="w3-btn w3-black"> No </a> <!--This is for the no button, which has the function depressionadd within it to trigger adding to depression_count jump to page 3-->
 	</div>
+	</div>	
+<div class="page" id="three"> <!--Page 3-->
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Question 3</h1> <!--Question 3 heading-->
+	</div>
+	
+    	<div id="content" class="w3-container">
+        <p>Do you you feel like you are losing control often?</p>   <!--This is a question that asks the users if they have a sore throat--> 
+		<a href="#four"  onclick="anxietyAdd();" class="w3-btn w3-black"> Yes </a> <!--This is for the yes button which has the function depressionadd within it to trigger adding to the depreesion count jump to page 4-->
+         	<a href="#four"  onclick="depressionAdd();;" class="w3-btn w3-black"> No </a> <!--This is for the no button,which has the function allergyadd within it to trigger adding to anxiety_count jump to page 4-->
+    	</div>
+</div>
 	
 </body>
 </html>
