--- a/index.html
+++ b/index.html
@@ -29,31 +29,32 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 -->
 	
 <head> 
-	<title>Hello World</title>  
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="stylesheet" href="w3.css">
-	<link rel="stylesheet" href="w3-colors-flat.css">
-</head> 
+      <title>Depression vs Anxiety</title>  
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <link rel="stylesheet" href="w3.css">
+      <link rel="stylesheet" href="w3-colors-flat.css">
+   </head> 
+
 
 <script>
-
-	var depression_count = 0;//This is the variable for depression_count inputs from users
+        var depression_count = 0;//This is the variable for depression_count inputs from users
         var anxiety_count = 0;//This is the variable for the anxiety_count inputs from users
         var total = 4;//This is the total number of inputs from users, regardless of yes/no choices
-
+        
 
         function depressionAdd(){
-            allergy_count = allergy_count + 1;//This is the function that will add up and keep track of the depression inputs from users
+            depression_count = depression_count + 1;//This is the function that will add up and keep track of the depression inputs from users
 		
 		
 
         }
 
         function anxietyAdd(){
-            cold_count = cold_count + 1;//This is the function that will add up and keep track of the anxiety inputs from users
+            anxiety_count = anxiety_count + 1;//This is the function that will add up and keep track of the anxiety inputs from users
         }
-	function getResults(){
+        
+        function getResults(){
           if(depression_count>anxiety_count)//condition for this part of the function to trigger
           {document.write("There is a "+(depression_count/total)*100+ "% probability of you having depression."+ "<br>");//Writes the result statement by determining the probability of the user having depression based on their input.
            document.write("However, mental illnesses are always difficult to correctly diagnose due to many overlapping symptoms, please see a psychiatrist if you are having any problems mentally.");
@@ -66,11 +67,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
           else  //for when allergy_count=cold_count
           { document.write("The results are inconclusive, please see a health professional.");} //writes the inconclusive result when cold depression_count=anxiety_count count.
         }
+  </script>
 
-</script>	
 
 
-<!-- THIS STYLE CODE HELPS MAKE YOUR APP LOOK GOOD. PROBABLY DONT MESS WITH IT -->
 <style>	
 .body {
      margin: 0em;
@@ -94,8 +94,21 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </style>
 
 <body>
+<div id="header" class="w3-container w3-flat-carrot">
+	<h1>Depression or Anxiety?</h1>
+</div>
 	
-	<div class="page" id="one"> <!--Page 1-->
+<div id="content" class="w3-container">
+	<p>Do you ever wonder if you have depression or anxiety? CLick get started below to find out!</p>  <!--question prompting user to start the website-->
+	
+	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a> <!--Get started button-->
+	
+	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
+ 	
+	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p> <!--Disclaimer so noone will take the results seriously and die-->
+
+
+<div class="page" id="one"> <!--Page 1-->
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 1</h1> <!--Question 1 heading-->
 	</div>
@@ -104,9 +117,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         <p>Do you feel any sadness or hoplessness?</p>   <!--This is a question that asks users if they feel sad or hopeless-->  
 		<a href="#two"  onclick="depressionAdd();" class="w3-btn w3-black"> Yes </a> <!--This is for the yes button, which has the function depressionadd within it to trigger adding to depression_count jump to page 2-->
          	<a href="#two"  onclick="anxietyAdd();" class="w3-btn w3-black"> No </a> <!--This is for the no buttom, which has the function anxietyadd within it to trigger adding to the anxiety_count jump to page 2-->
-		
+
+
+
     	</div>
-	</div>
+</div>
 
 <div class="page" id="two"> <!--Page 2-->
 	<div class="w3-container w3-flat-carrot">
@@ -118,7 +133,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#three"  onclick="anxietyAdd();" class="w3-btn w3-black"> Yes </a>  <!--This is for the yes button which has the function anxietyadd within it to trigger adding to the Anxiety count jump to page 3-->
          	<a href="#three"  onclick="depressionAdd();;" class="w3-btn w3-black"> No </a> <!--This is for the no button, which has the function depressionadd within it to trigger adding to depression_count jump to page 3-->
 	</div>
-	</div>	
+</div>	
 <div class="page" id="three"> <!--Page 3-->
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 3</h1> <!--Question 3 heading-->
@@ -130,7 +145,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
          	<a href="#four"  onclick="depressionAdd();;" class="w3-btn w3-black"> No </a> <!--This is for the no button,which has the function allergyadd within it to trigger adding to anxiety_count jump to page 4-->
     	</div>
 </div>
-	<div class="page" id="four"> <!--Page 4-->
+<div class="page" id="four"> <!--Page 4-->
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 4</h1> <!--Question 4 heading-->
 	</div>
@@ -157,6 +172,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
    </script>
   </div>
 </div>
-	
+
+
+	 
+<footer class="w3-bottom w3-container w3-flat-carrot"> <!-- Footer with DIY! written on it-->
+	<p>DIY!</p>
+</footer>
+
 </body>
 </html>
