--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         <p>Do you feel any sadness or hoplessness?</p>   <!--This is a question that asks users if they feel sad or hopeless-->  
 		<a href="#two"  onclick="depressionAdd();" class="w3-btn w3-black"> Yes </a> <!--This is for the yes button, which has the function depressionadd within it to trigger adding to depression_count jump to page 2-->
          	<a href="#two"  onclick="anxietyAdd();" class="w3-btn w3-black"> No </a> <!--This is for the no buttom, which has the function anxietyadd within it to trigger adding to the anxiety_count jump to page 2-->
-         	
+         	<img src="img_beaver.jpg" alt="A beaver">
 		<h1>Question 2</h1>  <!--Question 2 heading-->
 		<p>Do you feel cranky or on edge often?</p><!--This is a question that asks the users if they fell cranky or on edge-->
 		<a href="#three"  onclick="anxietyAdd();" class="w3-btn w3-black"> Yes </a>  <!--This is for the yes button which has the function anxietyadd within it to trigger adding to the Anxiety count jump to page 3-->
