--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     z-index: 0;
     background-color: hsl(0,0%,100%);
 }
+	img, object{
+            	max-height:90%;
+        		max-width:90%;
+        	}
+
 
   .page:target {
     left: 0vw;
