--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
                  <img src="https://preview.redd.it/125ebgihdbu41.jpg?auto=webp&s=8eaffc539b116a4caf87cae867a27efea5c69b15" alt="a bunny"> <!-- This  is an image of a bunny-->
 
     <h1>Results</h1> <!--Results heading-->
-    </p> you may have:</p>
+    </p> YOU may have:</p>
     <p id="result"></p>
     <a href="#five"  onclick="getResults();" class="w3-btn w3-black"> Results </a> <!--This is the result button, which triggers the function getResult, which then print out a statement diagnosing the user's illness based on their inputs.-->
     <script>
