--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
  
 Authors in chronological order of contribution:
-Tim Riedel
+Nam Nguyen
 Author 2
  
 Further Information:
@@ -17,10 +17,10 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+To identigy and diagnose depression vs anxiety
  
 Known Issues:
-blah, blah, blah, blah
+Very limited questions so don't take the results seriously 
 Ignore this error message if you see it using the javaScript console: Error with Permissions-Policy header: Origin trial controlled feature not enabled: 'interest-cohort'.
 
 References:
