--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
           document.write("However, mental illnesses are always difficult to correctly diagnose due to many overlapping symptoms, please see a psychiatrist if you are having any problems mentally.");// Another disclaimer in case someone takes this diagnosis seriously.
           }
           else  //for when allergy_count=cold_count
-          { document.write("The results are inconclusive, please see a health professional.");} //writes the inconclusive result when depresioncount= anxiety count.
+          { document.write("The results are inconclusive, you have equal equal amount of symtoms for both anxiety and depression (50/50%), it is very possible that you may have both, please see a health professional.");} //writes the inconclusive result when depresioncount= anxiety count.
         }
   </script>
 
