--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 	
 <div id="content" class="w3-container">
-	<p>Do you ever wonder if you have depression or anxiety? CLick get started below to find out!</p>  <!--question prompting user to start the website-->
-	
-	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a> <!--Get started button-->
+	<p>Do you ever wonder if you have depression or anxiety? Answer a few questions to find out!</p>  <!--question prompting user to start the website-->
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
